--- a/sign-in.html
+++ b/sign-in.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unlim8ted Sign-In</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <!-- Import Firebase as ES Modules -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithEmailAndPassword, createUserWithEmailAndPassword, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
     import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+
     // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyC8rw6kaFhJ2taebKRKKEA7iLqBvak_Dbc",
@@ -19,250 +19,240 @@
       messagingSenderId: "1059428499872",
       appId: "1:1059428499872:web:855308683718237de6e4c5",
     };
-  
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth();
-    const db = getFirestore(); // Initialize Firestore
-  
-  // Add user to Firestore
-async function addUserToFirestore(user) {
-  try {
-    const userDocRef = doc(db, "users", user.uid);
-    await setDoc(userDocRef, {
-      email: user.email,
-      name: user.displayName || null,
-      createdAt: serverTimestamp(),
-    }, { merge: true });
-    console.log("User added to Firestore successfully.");
-  } catch (error) {
-    console.error("Error adding user to Firestore:", error.message);
-  }
-}
-// Toggle Between Modes
-window.toggleMode = function toggleMode() {
-  const mode = document.getElementById('form-mode');
-  const submitButton = document.getElementById('form-submit');
-  const toggleText = document.getElementById('toggle-text');
+    const db = getFirestore();
 
-  if (mode.textContent === 'Sign In') {
-    mode.textContent = 'Create Account';
-    submitButton.textContent = 'Create Account';
-    toggleText.textContent = 'Already have an account? Sign In.';
-    submitButton.onclick = handleAccountCreation;
-  } else {
-    mode.textContent = 'Sign In';
-    submitButton.textContent = 'Sign In';
-    toggleText.textContent = "Don't have an account? Create one.";
-    submitButton.onclick = handleEmailSignIn;
-  }
-};
-// Updated Google Sign-In
-async function handleGoogleSignIn() {
-  const provider = new GoogleAuthProvider();
-  try {
-    const result = await signInWithPopup(auth, provider);
-    const user = result.user;
+    // Ensure persistent login
+    setPersistence(auth, browserLocalPersistence).catch(console.error);
 
     // Add user to Firestore
-    await addUserToFirestore(user);
+    async function addUserToFirestore(user) {
+      try {
+        const userRef = doc(db, "users", user.uid);
+        await setDoc(userRef, {
+          email: user.email,
+          name: user.displayName || null,
+          createdAt: serverTimestamp(),
+        }, { merge: true });
+        console.log("User added/updated in Firestore.");
+      } catch (error) {
+        console.error("Error adding user to Firestore:", error.message);
+      }
+    }
 
-    alert(`Welcome, ${user.displayName}!`);
-    window.location.href = 'https://unlim8ted.com#products';
-  } catch (error) {
-    console.error('Google Sign-In error:', error.message);
-    alert('Failed to sign in with Google.');
-  }
-}
+    // Google Sign-In
+    async function handleGoogleSignIn() {
+      const provider = new GoogleAuthProvider();
+      try {
+        const result = await signInWithPopup(auth, provider);
+        const user = result.user;
+        await addUserToFirestore(user);
+        alert(`Welcome, ${user.displayName}!`);
+        window.location.href = "https://unlim8ted.com/profile";
+      } catch (error) {
+        console.error("Google Sign-In error:", error.message);
+        alert("Failed to sign in with Google.");
+      }
+    }
 
-// Updated Email Sign-In
-async function handleEmailSignIn(event) {
-  event.preventDefault();
-  const email = document.getElementById('email').value;
-  const password = document.getElementById('password').value;
+    // Email Sign-In
+    async function handleEmailSignIn(event) {
+      event.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-  try {
-    const userCredential = await signInWithEmailAndPassword(auth, email, password);
-    const user = userCredential.user;
+      try {
+        const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+        await addUserToFirestore(user);
+        alert(`Welcome back, ${user.email}!`);
+        window.location.href = "https://unlim8ted.com/profile";
+      } catch (error) {
+        console.error("Email Sign-In error:", error.message);
+        alert("Sign-in failed. Check your email and password.");
+      }
+    }
 
-    // Add user to Firestore
-    await addUserToFirestore(user);
+    // Account Creation
+    async function handleAccountCreation(event) {
+      event.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-    alert(`Welcome back, ${user.email}!`);
-    window.location.href = 'https://unlim8ted.com/profile';
-  } catch (error) {
-    console.error('Email Sign-In error:', error.message);
-    alert(`Failed to sign in, ${error.message}. Check your email and password.`);
-  }
-}
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+        await addUserToFirestore(user);
+        alert(`Account created for ${user.email}!`);
+        window.location.href = "https://unlim8ted.com/profile";
+      } catch (error) {
+        console.error("Account Creation error:", error.message);
+        alert("Failed to create account. Try again.");
+      }
+    }
 
-// Updated Account Creation
-async function handleAccountCreation(event) {
-  event.preventDefault();
-  const email = document.getElementById('email').value;
-  const password = document.getElementById('password').value;
+    // Toggle Between Modes
+    function toggleMode() {
+      const mode = document.getElementById("form-mode");
+      const submitButton = document.getElementById("form-submit");
+      const toggleText = document.getElementById("toggle-text");
 
-  try {
-    const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-    const user = userCredential.user;
+      if (mode.textContent === "Sign In") {
+        mode.textContent = "Create Account";
+        submitButton.textContent = "Create Account";
+        toggleText.textContent = "Already have an account? Sign In.";
+        submitButton.onclick = handleAccountCreation;
+      } else {
+        mode.textContent = "Sign In";
+        submitButton.textContent = "Sign In";
+        toggleText.textContent = "Don't have an account? Create one.";
+        submitButton.onclick = handleEmailSignIn;
+      }
+    }
 
-    // Add user to Firestore
-    await addUserToFirestore(user);
-
-    alert(`Account created successfully for ${user.email}!`);
-    window.location.href = 'https://unlim8ted.com#products';
-  } catch (error) {
-    console.error('Account Creation error:', error.message);
-    alert(`Failed to create account, ${error.message}. Please try again.`);
-  }
-}
-  
-    // Expose functions to the global scope
-    window.handleGoogleSignIn = handleGoogleSignIn;
-    window.handleEmailSignIn = handleEmailSignIn;
-    window.handleAccountCreation = handleAccountCreation;
-    window.toggleMode = toggleMode;
-  
     // Add Event Listeners
-    window.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('google-signin-btn').addEventListener('click', handleGoogleSignIn);
-      document.getElementById('toggle-text').addEventListener('click', toggleMode);
-      document.getElementById('form-submit').addEventListener('click', handleEmailSignIn);
+    window.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("google-signin-btn").addEventListener("click", handleGoogleSignIn);
+      document.getElementById("toggle-text").addEventListener("click", toggleMode);
+      document.getElementById("form-submit").addEventListener("click", handleEmailSignIn);
     });
   </script>
-  
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-      color: #e0e0e0;
-    }
 
-    .background {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    color: #e0e0e0;
+  }
 
-    .background span {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background: linear-gradient(45deg, #00ff99, #ff0077);
-      opacity: 0.7;
-      filter: blur(8px);
-      animation: float 6s infinite ease-in-out;
-      border-radius: 50%;
-    }
+  .background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+  }
 
-    @keyframes float {
-      0%, 100% {
-        transform: translateY(0) translateX(0);
-      }
-      50% {
-        transform: translateY(-40px) translateX(20px);
-      }
-    }
+  .background span {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: linear-gradient(45deg, #00ff99, #ff0077);
+    opacity: 0.7;
+    filter: blur(8px);
+    animation: float 6s infinite ease-in-out;
+    border-radius: 50%;
+  }
 
-    .container {
-      text-align: center;
-      background: rgba(30, 30, 30, 0.9);
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0, 255, 153, 0.3);
-      padding: 2rem;
-      max-width: 400px;
-      width: 90%;
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0) translateX(0);
     }
-
-    .logo {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #00ff99;
-      margin-bottom: 1rem;
-      text-shadow: 0 0 10px #00ff99;
+    50% {
+      transform: translateY(-40px) translateX(20px);
     }
+  }
 
-    .button-container {
-      margin-top: 2rem;
-    }
+  .container {
+    text-align: center;
+    background: rgba(30, 30, 30, 0.9);
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 255, 153, 0.3);
+    padding: 2rem;
+    max-width: 400px;
+    width: 90%;
+  }
 
-    button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      margin: 5px 0;
-      width: 100%;
-    }
+  .logo {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #00ff99;
+    margin-bottom: 1rem;
+    text-shadow: 0 0 10px #00ff99;
+  }
 
-    #google-signin-btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #00ff99;
-      color: #24243e;
-      border: none;
-      border-radius: 25px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      box-shadow: 0 5px 10px rgba(0, 255, 153, 0.3);
-    }
+  .button-container {
+    margin-top: 2rem;
+  }
 
-    #google-signin-btn:hover {
-      background: #00cc77;
-    }
+  button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 5px 0;
+    width: 100%;
+  }
 
-    #google-signin-btn img {
-      width: 20px;
-      margin-right: 10px;
-    }
+  #google-signin-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #00ff99;
+    color: #24243e;
+    border: none;
+    border-radius: 25px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 5px 10px rgba(0, 255, 153, 0.3);
+  }
+
+  #google-signin-btn:hover {
+    background: #00cc77;
+  }
+
+  #google-signin-btn img {
+    width: 20px;
+    margin-right: 10px;
+  }
 
 
-    #email-signin-form input {
-      padding: 10px;
-      margin-bottom: 10px;
-      width: 100%;
-      border: none;
-      border-radius: 5px;
-      outline: none;
-    }
+  #email-signin-form input {
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+  }
 
-    #email-signin-form button {
-      background: #00ff99;
-      color: #24243e;
-    }
+  #email-signin-form button {
+    background: #00ff99;
+    color: #24243e;
+  }
 
-    #email-signin-form button:hover {
-      background: #00cc77;
-    }
+  #email-signin-form button:hover {
+    background: #00cc77;
+  }
 
-    .info {
-      margin-top: 1.5rem;
-      font-size: 0.9rem;
-      color: #b0b0b0;
-    }
+  .info {
+    margin-top: 1.5rem;
+    font-size: 0.9rem;
+    color: #b0b0b0;
+  }
 
-    .info a {
-      color: #00ff99;
-      text-decoration: none;
-      font-weight: bold;
-    }
+  .info a {
+    color: #00ff99;
+    text-decoration: none;
+    font-weight: bold;
+  }
 
-    .info a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  .info a:hover {
+    text-decoration: underline;
+  }
+</style>
 </head>
 <body>
   <!-- Animated background -->
@@ -274,16 +264,15 @@ async function handleAccountCreation(event) {
     <span style="top: 80%; left: 50%; animation-delay: 3s;"></span>
   </div>
 
-  <!-- Sign-in container -->
   <div class="container">
     <div class="logo">Sign In</div>
-    <p>Sign in or sign up to continue to your account</p>
+    <p>Sign in or create an account to continue.</p>
     <div id="form-mode">Sign In</div>
-          <div class="button-container">
-        <button id="google-signin-btn">
-          <img src="https://lh3.googleusercontent.com/COxitqgJr1sJnIDe8-jiKhxDx1FrYbtRHKJ9z_hELisAlapwE9LUPh6fcXIfb5vwpbMl4xl9H9TRFPc5NOO8Sb3VSgIBrfRYvW6cUA" alt="Google Logo">
-          Sign in with Google
-        </button>
+    <div class="button-container">
+      <button id="google-signin-btn">
+        <img src="https://lh3.googleusercontent.com/COxitqgJr1sJnIDe8-jiKhxDx1FrYbtRHKJ9z_hELisAlapwE9LUPh6fcXIfb5vwpbMl4xl9H9TRFPc5NOO8Sb3VSgIBrfRYvW6cUA" alt="Google Logo">
+        Sign in with Google
+      </button>
       <p style="margin: 1rem 0;">Or</p>
       <form id="email-signin-form">
         <input type="email" id="email" placeholder="Email" required>
@@ -295,8 +284,7 @@ async function handleAccountCreation(event) {
           </p>
           <p>An account is needed to comment, rate products, and add things to your cart, but it is not required.</p>
           <p>If you'd prefer not to create an account, you can visit our <a href="#products">Products</a> or <a href="#about">About Us</a> sections.</p>
-        </div>
-      </form>
+        </div>      </form>
     </div>
   </div>
 </body>
