--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     }
 
     .dropdown-content a {
-      color: black;
+      color: rgb(255, 255, 255);
       text-decoration: none;
       padding: 12px 16px;
       display: block;
