fix other section being wrapped in another

--- a/index.html
+++ b/index.html
@@ -2048,6 +2048,8 @@
         <p><strong>Price:</strong> $7.00</p>
     </a>
   </div>
+</div>
+
 
   <div id="films" class="content-section">
     <h1>Films</h1>
