seperated sections into seperate pages to reduce loading times

--- a/404.html
+++ b/404.html
@@ -208,7 +208,7 @@
   <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
+    <title>Unlim8ted - 404 - Page Not Found</title>
     <style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
