--- a/502.html
+++ b/502.html
@@ -208,7 +208,7 @@
   </script>
   <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>502 Bad Gateway</title>
+    <title>Unlim8ted - 502 Bad Gateway</title>
     <style>
         body {
             font-family: Arial, sans-serif;
