--- a/air-hockey.html
+++ b/air-hockey.html
@@ -1,6 +1,6 @@
 
 <html><head>
-    <title>Unlim8ted Air Hockey</title>
+    <title>Unlim8ted - Air Hockey</title>
     <meta name="description"content="Online air hockey \ pin ball game, retro, customizable settings, powered by Unlim8ted Studio Production."/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
@@ -422,28 +422,29 @@
           navLinks.classList.toggle("show");
         }
       </script>
-      <nav class="navbar">
-        <div class="navbar-header">
-          <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-          <ul class="nav-links" id="navbarLinks">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="/#products">Products</a></li>
-            <li class="nav-item"><a href="/#help">Help</a></li>
-            <li class="nav-item"><a href="/#about">About</a></li>
-            <li class="nav-item dropdown">
-              <a href="javascript:void(0)" class="dropbtn">More</a>
-              <div class="dropdown-content">
-                <a href="/#portfolio">Portfolio</a>
-                <a href="/#contact">Contact</a>
-                <a href="/#blog">Blog</a>
-                <a href="/live-chat">Live Chat</a>
-                <a href="/live-game">Live Chat and Game</a>
-                <a href="/puzzle-squares">Puzzle Squares</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <nav class="navbar">
+    <div class="navbar-header">
+      <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+      <ul class="nav-links" id="navbarLinks">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="products">Products</a></li>
+        <li class="nav-item"><a href="help">Help</a></li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="portfolio">Portfolio</a>
+            <a href="contact">Contact</a>
+            <a href="blog">Blog</a>
+            <a href="live-chat">Live Chat</a>
+            <a href="live-game">Live Chat and Game</a>
+            <a href="puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+        <a href="old"><button>Old site</button></a>
+      </ul>
+    </div>
+  </nav>
     </head>
     <body>
     <div id="scoreBoard"><span class="player-score">Player: 0</span> | <span class="ai-score">AI: 0</span></div>
