--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unlim8ted Music</title>
+    <title>Unlim8ted - Music</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="description"
         content="Unlim8ted Music. Great music made by Unlim8ted Studio Productions. Always free, no signup required. Powered by Unlim8ted Studio Productions." />
@@ -413,28 +413,29 @@
 
 
 
-    <nav class="navbar">
-        <div class="navbar-header">
-            <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-            <ul class="nav-links" id="navbarLinks">
-                <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/#products">Products</a></li>
-                <li class="nav-item"><a href="/#help">Help</a></li>
-                <li class="nav-item"><a href="/#about">About</a></li>
-                <li class="nav-item dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">More</a>
-                    <div class="dropdown-content">
-                        <a href="/#portfolio">Portfolio</a>
-                        <a href="/#contact">Contact</a>
-                        <a href="/#blog">Blog</a>
-                        <a href="/live-chat">Live Chat</a>
-                        <a href="/live-game">Live Chat and Game</a>
-                        <a href="/puzzle-squares">Puzzle Squares</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar">
+    <div class="navbar-header">
+      <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+      <ul class="nav-links" id="navbarLinks">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="products">Products</a></li>
+        <li class="nav-item"><a href="help">Help</a></li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="portfolio">Portfolio</a>
+            <a href="contact">Contact</a>
+            <a href="blog">Blog</a>
+            <a href="live-chat">Live Chat</a>
+            <a href="live-game">Live Chat and Game</a>
+            <a href="puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+        <a href="old"><button>Old site</button></a>
+      </ul>
+    </div>
+  </nav>
     <script src="https://cdn.jsdelivr.net/npm/@tonejs/midi"></script>
     <style>
         /* Base styles */
