--- a/tos.html
+++ b/tos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Unlim8ted</title>
+    <title>Unlim8ted - TOS</title>
     <meta name="description" content="'About Us' Unlim8ted Studio Productions is a dynamic entertainment company based in the united states . our mission is to create engaging and innovative experiences across a variety of media . the animated film follows the adventures of a meatball Learn more at Unlim8ted Studio Productions." name="description"/>
   <style media="screen" type="text/css">
     .layer1_class {
@@ -438,29 +438,29 @@
 
 
 
-  <nav class="navbar">
-      <div class="navbar-header">
-          <button class="navbar-toggle" style="position:absolute; top:5px; left:1%"
-              onclick="toggleMenu()">☰</button>
-          <ul class="nav-links" id="navbarLinks">
-              <li class="nav-item"><a href="/">Home</a></li>
-              <li class="nav-item"><a href="/#products">Products</a></li>
-              <li class="nav-item"><a href="/#help">Help</a></li>
-              <li class="nav-item"><a href="/#about">About</a></li>
-              <li class="nav-item dropdown">
-                  <a href="javascript:void(0)" class="dropbtn">More</a>
-                  <div class="dropdown-content">
-                      <a href="/#portfolio">Portfolio</a>
-                      <a href="/#contact">Contact</a>
-                      <a href="/#blog">Blog</a>
-                      <a href="/live-chat">Live Chat</a>
-                      <a href="/live-game">Live Chat and Game</a>
-                      <a href="/puzzle-squares">Puzzle Squares</a>
-                  </div>
-              </li>
-          </ul>
-      </div>
-  </nav>
+<nav class="navbar">
+  <div class="navbar-header">
+    <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+    <ul class="nav-links" id="navbarLinks">
+      <li class="nav-item"><a href="/">Home</a></li>
+      <li class="nav-item"><a href="products">Products</a></li>
+      <li class="nav-item"><a href="help">Help</a></li>
+      <li class="nav-item"><a href="about">About</a></li>
+      <li class="nav-item dropdown">
+        <a href="javascript:void(0)" class="dropbtn">More</a>
+        <div class="dropdown-content">
+          <a href="portfolio">Portfolio</a>
+          <a href="contact">Contact</a>
+          <a href="blog">Blog</a>
+          <a href="live-chat">Live Chat</a>
+          <a href="live-game">Live Chat and Game</a>
+          <a href="puzzle-squares">Puzzle Squares</a>
+        </div>
+      </li>
+      <a href="old"><button>Old site</button></a>
+    </ul>
+  </div>
+</nav>
     <style>
         body {
             background: linear-gradient(145deg, #2d033b, #12001e);
