--- a/50x.html
+++ b/50x.html
@@ -229,7 +229,7 @@
         }
     </style>
     
-<title>Error</title>
+<title>Unlim8ted - 50x Error</title>
 <style>
 html { color-scheme: light dark; }
 body { width: 35em; margin: 0 auto;
