--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -541,28 +541,29 @@
                 navLinks.classList.toggle("show");
               }
               </script>
-              <nav class="navbar">
-                <div class="navbar-header">
-                  <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-                  <ul class="nav-links" id="navbarLinks">
-                    <li class="nav-item"><a href="/">Home</a></li>
-                    <li class="nav-item"><a href="/#products">Products</a></li>
-                    <li class="nav-item"><a href="/#help">Help</a></li>
-                    <li class="nav-item"><a href="/#about">About</a></li>
-                    <li class="nav-item dropdown">
-                      <a href="javascript:void(0)" class="dropbtn">More</a>
-                      <div class="dropdown-content">
-                        <a href="/#portfolio">Portfolio</a>
-                        <a href="/#contact">Contact</a>
-                        <a href="/#blog">Blog</a>
-                        <a href="/live-chat">Live Chat</a>
-                        <a href="/live-game">Live Chat and Game</a>
-                        <a href="/puzzle-squares">Puzzle Squares</a>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </nav><head>
+  <nav class="navbar">
+    <div class="navbar-header">
+      <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+      <ul class="nav-links" id="navbarLinks">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="products">Products</a></li>
+        <li class="nav-item"><a href="help">Help</a></li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="portfolio">Portfolio</a>
+            <a href="contact">Contact</a>
+            <a href="blog">Blog</a>
+            <a href="live-chat">Live Chat</a>
+            <a href="live-game">Live Chat and Game</a>
+            <a href="puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+        <a href="old"><button>Old site</button></a>
+      </ul>
+    </div>
+  </nav><head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <style type="text/css">
         @import url(https://themes.googleusercontent.com/fonts/css?kit=vQE1If-8dx8Qo42qgmAeX_k2rVEQycQtfvMiinSj_2TwuDotfz6e04dRCe9DQTujT7sHiq6CR_LSjMLIyGgcSgJZesNbJOaEkjJoktWy9ZI);
