--- a/404.html
+++ b/404.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description"content="Title: 404 - Page Not Found 404 Unlim8ted. it seems you've found a page that doesn't exist . Learn more at Unlim8ted Studio Productions." name="description"/>
-      <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+  <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="description"
+    content="Title: 404 - Page Not Found 404 Unlim8ted. it seems you've found a page that doesn't exist . Learn more at Unlim8ted Studio Productions."
+    name="description" />
+  <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
@@ -207,99 +210,114 @@
   </script>
   <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unlim8ted - 404 - Page Not Found</title>
-    <style>
-        body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background-color: #ffe066;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            font-size: 70px;
-            color: #ff0000;
-        }
-        p {
-            font-size: 20px;
-            color: #333;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            background: #fff3b0;
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin: 20px 0;
-        }
-        .back-button {
-            background-color: #ff5722;
-            color: white;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        .back-button:hover {
-            background-color: #e64a19;
-        }
-        .funny-text {
-            font-size: 16px;
-            color: #666;
-            margin-top: 30px;
-        }
-    </style>
-<style>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unlim8ted - 404 - Page Not Found</title>
+  <style>
+    body {
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      background-color: #ffe066;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      font-size: 70px;
+      color: #ff0000;
+    }
+
+    p {
+      font-size: 20px;
+      color: #333;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: #fff3b0;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 20px 0;
+    }
+
+    .back-button {
+      background-color: #ff5722;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      text-decoration: none;
+      font-size: 18px;
+    }
+
+    .back-button:hover {
+      background-color: #e64a19;
+    }
+
+    .funny-text {
+      font-size: 16px;
+      color: #666;
+      margin-top: 30px;
+    }
+  </style>
+  <style>
     /* logo */
     .logo {
-        position: absolute;
-        z-index: 1;
-        top: 5%;  /* Adjust top position relative to viewport height */
-        left: 5%; /* Adjust left position relative to viewport width */
-        display: block;
+      position: absolute;
+      z-index: 1;
+      top: 5%;
+      /* Adjust top position relative to viewport height */
+      left: 5%;
+      /* Adjust left position relative to viewport width */
+      display: block;
     }
 
     .logo img {
-        height: 10vw; /* Adjust height relative to viewport width */
-        max-height: 140px; /* Set a maximum height to prevent the logo from getting too large on larger screens */
-        width: auto; /* Maintain aspect ratio */
+      height: 10vw;
+      /* Adjust height relative to viewport width */
+      max-height: 140px;
+      /* Set a maximum height to prevent the logo from getting too large on larger screens */
+      width: auto;
+      /* Maintain aspect ratio */
     }
 
     /* Media query for small devices */
     @media (max-width: 600px) {
-        .logo img {
-            height: 20vw; /* Larger logo for smaller devices */
-        }
+      .logo img {
+        height: 20vw;
+        /* Larger logo for smaller devices */
+      }
     }
-</style>
+  </style>
 
 </head>
+
 <body>
-    <div id="inner-wrap">
-        <div class="logo" style="z-index: 2;">
-          <a href="/">
-            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
-          </a>
-        </div>
+  <div id="inner-wrap">
+    <div class="logo" style="z-index: 2;">
+      <a href="/">
+        <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+      </a>
+    </div>
     <div class="container">
-        <h1>404</h1>
-        <p>Well, this is awkward...</p>
-        <img src="images\error\not_found.png" alt="404 Image">
-        <p>It seems you've found a page that doesn't exist. It's either hiding or was eaten by a cat. 🐱</p>
-        <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
-        <p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
+      <h1>404</h1>
+      <p>Well, this is awkward...</p>
+      <img src="images\error\not_found.png" alt="404 Image">
+      <p>It seems you've found a page that doesn't exist. It's either hiding or was eaten by a cat. 🐱</p>
+      <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
+      <p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
     </div>
 </body>
-    <!-- Copyright -->
-    <div style="margin-top: 20px;">
-        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-      </div>
-    </div>
+<!-- Copyright -->
+<div style="margin-top: 20px;">
+  <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+</div>
+</div>
+
 </html>
