--- a/blog.html
+++ b/blog.html
@@ -14,14 +14,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://unlim8ted.com/blog/">
     <meta property="og:title" content="Blog - Unlim8ted Studio Productions">
-    <meta property="og:description" content="Stay updated with the latest blogs from Unlim8ted Studio Productions, covering creativity, entertainment, and behind-the-scenes insights.">
+    <meta property="og:description"
+        content="Stay updated with the latest blogs from Unlim8ted Studio Productions, covering creativity, entertainment, and behind-the-scenes insights.">
     <meta property="og:image" content="https://unlim8ted.com/images/blog-meta-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://unlim8ted.com/blog/">
     <meta property="twitter:title" content="Blog - Unlim8ted Studio Productions">
-    <meta property="twitter:description" content="Stay updated with the latest blogs from Unlim8ted Studio Productions, covering creativity, entertainment, and behind-the-scenes insights.">
+    <meta property="twitter:description"
+        content="Stay updated with the latest blogs from Unlim8ted Studio Productions, covering creativity, entertainment, and behind-the-scenes insights.">
     <meta property="twitter:image" content="https://unlim8ted.com/images/blog-meta-image.jpg">
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -215,68 +217,68 @@
 
     </script>
     <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-        <style>
-        
-/* Navigation Bar Styles */
-.navbar {
-    display: flex;
-    justify-content: center;
-    background-color: #333333d0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 3;
-  }
-  
-  .nav-links {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-  }
-  
-  .nav-item {
-    position: relative;
-  }
-  
-  .nav-item a {
-    display: block;
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
-  }
-  
-  .nav-item a:hover {
-    background-color: #15131f;
-    color: rgb(51, 207, 103);
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 3;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #1c1d38;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-    z-index: 3;
-  }
+    <style>
+        /* Navigation Bar Styles */
+        .navbar {
+            display: flex;
+            justify-content: center;
+            background-color: #333333d0;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 3;
+        }
+
+        .nav-links {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        .nav-item {
+            position: relative;
+        }
+
+        .nav-item a {
+            display: block;
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+
+        .nav-item a:hover {
+            background-color: #15131f;
+            color: rgb(51, 207, 103);
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 3;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #1c1d38;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+            z-index: 3;
+        }
+
         .dropdown-content {
             display: none;
             position: absolute;
@@ -331,29 +333,29 @@
             navLinks.classList.toggle("show");
         }
     </script>
-  <nav class="navbar">
-    <div class="navbar-header">
-      <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-      <ul class="nav-links" id="navbarLinks">
-        <li class="nav-item"><a href="/">Home</a></li>
-        <li class="nav-item"><a href="products">Products</a></li>
-        <li class="nav-item"><a href="help">Help</a></li>
-        <li class="nav-item"><a href="about">About</a></li>
-        <li class="nav-item dropdown">
-          <a href="javascript:void(0)" class="dropbtn">More</a>
-          <div class="dropdown-content">
-            <a href="portfolio">Portfolio</a>
-            <a href="contact">Contact</a>
-            <a href="blog">Blog</a>
-            <a href="live-chat">Live Chat</a>
-            <a href="live-game">Live Chat and Game</a>
-            <a href="puzzle-squares">Puzzle Squares</a>
-          </div>
-        </li>
-        <a href="old"><button>Old site</button></a>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar">
+        <div class="navbar-header">
+            <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+            <ul class="nav-links" id="navbarLinks">
+                <li class="nav-item"><a href="/">Home</a></li>
+                <li class="nav-item"><a href="products">Products</a></li>
+                <li class="nav-item"><a href="help">Help</a></li>
+                <li class="nav-item"><a href="about">About</a></li>
+                <li class="nav-item dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">More</a>
+                    <div class="dropdown-content">
+                        <a href="portfolio">Portfolio</a>
+                        <a href="contact">Contact</a>
+                        <a href="blog">Blog</a>
+                        <a href="live-chat">Live Chat</a>
+                        <a href="live-game">Live Chat and Game</a>
+                        <a href="puzzle-squares">Puzzle Squares</a>
+                    </div>
+                </li>
+                <a href="old"><button>Old site</button></a>
+            </ul>
+        </div>
+    </nav>
     <style>
         /* logo */
         .logo {
@@ -382,25 +384,28 @@
                 /* Larger logo for smaller devices */
             }
         }
-        button {
-      padding: 10px;
-      font-size: 1em;
-      background-color: #000000;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
 
-    button:hover {
-      background-color: rgb(57, 200, 145);
-    }
-    .image {
-        max-width: 300px;
+        button {
+            padding: 10px;
+            font-size: 1em;
+            background-color: #000000;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-                /* Cart button and notification styles */
-                .cart-btn {
+
+        button:hover {
+            background-color: rgb(57, 200, 145);
+        }
+
+        .image {
+            max-width: 300px;
+        }
+
+        /* Cart button and notification styles */
+        .cart-btn {
             position: fixed;
             top: 20px;
             right: 20px;
@@ -558,7 +563,8 @@
         <div class="blog-grid">
             <div class="blog-post">
                 <h2>Embracing Creativity: How to Find Inspiration in the Everyday</h2>
-                <p>Discover how to tap into your creative potential by finding inspiration in the world around you...</p>
+                <p>Discover how to tap into your creative potential by finding inspiration in the world around you...
+                </p>
                 <a href="#">Read more</a>
             </div>
             <div class="blog-post">
