fix wrong image link

--- a/products.html
+++ b/products.html
@@ -1526,7 +1526,7 @@
         </div>
         <div class="item-category" id="software-items">
             <a href="square-pixels" class="item-box" data-category="entertainment">
-                <img src="unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                <img src="https://unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
                     alt="Square Pixels">
                 <h3>Square Pixels</h3>
             </a>
