--- a/music.html
+++ b/music.html
@@ -533,6 +533,9 @@
             <div class="song-item" onclick="playTrack('Blue Lasers.mid', 'Blue Lasers.mp3')">
                 Neon Lasers
             </div>
+            <div class="song-item" onclick="playTrack('Defiant Quiet.mid', 'Defiant Quiet.mp3')">
+                Quiet Defiance
+            </div>
             <p>©2024 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
 
