--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
+    html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
     .loader {
       position: fixed;
       background-color: black;
