--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
 
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
-    html, body {
+    @media only screen and (max-width: 767px) {
+    html {
   overflow-x: hidden;
   width: 100%;
-}
+}}
     .loader {
       position: fixed;
       background-color: black;
