--- a/music.html
+++ b/music.html
@@ -519,7 +519,7 @@
         <div class="song-list" style="padding-top: 50px;">
             <div class="song-item"
                 onclick="playTrack('The%20Echos%20of%20the%20Bells.mid', 'The%20Echos%20of%20the%20Bells.mp3')">
-                The Echos of the Bells
+                The Echos of the Bells 
             </div>
             <div class="song-item" onclick="playTrack('Serene Winter Night.mid', 'Serene Winter Night.mp3')">
                 Serene Winter Night
@@ -536,7 +536,9 @@
             <div class="song-item" onclick="playTrack('Defiant Quiet.mid', 'Defiant Quiet.mp3')">
                 Quiet Defiance
             </div>
-            <p>©2024 Unlim8ted Studio Productions. All rights reserved.</p>
+            <div class="song-item" onclick="playTrack('Close to the End.mid', 'Close to the End.mp3')">
+                Close to the End
+            </div>
         </div>
 
         <div class="midi-visualizer" id="visualizer">
@@ -549,6 +551,8 @@
                 <input type="range" id="volume" min="0" max="1" step="0.01" value="1" onchange="setVolume(event)">
             </div>
         </div>
+
+       
     </div>
 
     <script>
